# NS-Neuromorphic-Engine

./: .gitignore  Cargo.toml  LICENSE  README.md  brain.py  brain_patches.py  build.rs  perplexity_search.py  requirements.txt  semantic_memory.json  training_trace.jsonl  vision.py
.cargo/: config.toml
.github/: CODEOWNERS
src/: brain_thread.rs  main.rs  state.rs  tui.rs
