[package]
name    = "nova_simona_core"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "nova_simona_core"
path = "src/main.rs"

[dependencies]
# PyO3 — FFI bridge to Python (brain.py + stt_engine.py)
pyo3 = { version = "0.21", features = ["auto-initialize"] }

# CPAL — cross-platform audio capture (PipeWire/ALSA on Fedora)
cpal = "0.15"

# TUI
ratatui   = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# Lock-free shared state between threads
arc-swap = "1.7"

# Error handling
anyhow = "1.0"

# Random (for Simona stochastic resonance fallback)
rand       = "0.8"
rand_distr = "0.4"

# Time formatting (search timestamps)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

# ── Fedora 44 build notes ─────────────────────────────────────────────────────
#
# Install system deps first (see setup_fedora.sh):
#   sudo dnf install -y rust cargo python3-devel pipewire-devel alsa-lib-devel
#
# Set PyO3 Python path:
#   export PYO3_PYTHON=$(which python3)
#
# Build:
#   cargo build --release
#
# Run:
#   cargo run --release
#   # or directly:
#   ./target/release/nova_simona_core
#
# Audio on Fedora 44 (PipeWire):
#   CPAL uses PipeWire via ALSA compatibility layer automatically.
#   No extra configuration needed.
#   If mic is denied: Settings > Privacy > Microphone
